// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapSet display a dialog if addAllowed button is clicked 1`] = `
<div class="h-full p-d-flex p-flex-column">
  <div style="text-align: center;">
    <p-button-stub label="This is my add button, click here !" icon="pi pi-plus-circle" class="p-m-2"></p-button-stub>
  </div> <span>components.mapview.noGeoData</span>
  <lck-dialog-form-stub header="This is my add button, click here !" visible="true">
    <lck-data-detail-stub row="[object Object]" definition="[object Object]" cellstate="[object Object]" workspaceid="toto" mode="creation" secondarysources="[object Object]" fieldstovalidate="[object Object]"></lck-data-detail-stub>
  </lck-dialog-form-stub>
</div>
`;

exports[`MapSet hide automatically dialog after success 1`] = `
<div class="h-full p-d-flex p-flex-column">
  <div style="text-align: center;">
    <p-button-stub label="This is my add button, click here !" icon="pi pi-plus-circle" class="p-m-2"></p-button-stub>
  </div> <span>components.mapview.noGeoData</span>
  <lck-dialog-form-stub header="This is my add button, click here !" visible="true">
    <lck-data-detail-stub row="[object Object]" definition="[object Object]" cellstate="[object Object]" workspaceid="toto" mode="creation" secondarysources="[object Object]" fieldstovalidate="[object Object]"></lck-data-detail-stub>
  </lck-dialog-form-stub>
</div>
`;

exports[`MapSet match snapshot 1`] = `
<div class="h-full p-d-flex p-flex-column">
  <div style="text-align: center;">
    <p-button-stub label="This is my add button, click here !" icon="pi pi-plus-circle" class="p-m-2"></p-button-stub>
  </div> <span>components.mapview.noGeoData</span>
  <!---->
</div>
`;
